ajuste de caminhos dos arquivos

--- a/HTML/humanSpace.html
+++ b/HTML/humanSpace.html
@@ -24,7 +24,7 @@
         <header class="header">
           <nav class="navbar navbar-expand-lg navbar-dark bg-transparent pt-4">
             <div class="container-fluid">
-              <a class="navbar-brand" href="/HTML/index.html">
+              <a class="navbar-brand" href="../index.html">
                 <img
                   src="/IMAGENS/logo-obc-2021-darkbg.png"
                   alt="logoOneBitCode"
@@ -48,7 +48,7 @@
                     <a
                       class="nav-link active"
                       aria-current="page"
-                      href="/HTML/falcon9.html"
+                      href="./falcon9.html"
                       id="navItem"
                       >FALCON 9</a
                     >
@@ -56,7 +56,7 @@
                   <li class="nav-item">
                     <a
                       class="nav-link active"
-                      href="/HTML/humanSpace.html"
+                      href="./humanSpace.html"
                       id="navItem"
                       >HUMAN SPACE FLIGHT</a
                     >
