--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     <!--Link Css-->
     <link rel="stylesheet" href="/CSS/style.css" />
     <!--Favicon-->
-    <link rel="shortcut icon" href="/IMAGENS/favicon.png" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="./IMAGENS/favicon.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <div class="container-fluid container00 container01">
@@ -26,7 +30,7 @@
             <div class="container-fluid">
               <a class="navbar-brand" href="index.html">
                 <img
-                  src="/IMAGENS/logo-obc-2021-darkbg.png"
+                  src="./IMAGENS/logo-obc-2021-darkbg.png"
                   alt="logoOneBitCode"
                   class="logoPc"
                 />
