ajuste na imagens gif arrow down

--- a/HTML/humanSpace.html
+++ b/HTML/humanSpace.html
@@ -78,7 +78,7 @@
           <p class="subTitleHuman">FAZENDO A VIDA MULTIPLANETÁRIA</p>
         </div>
         <img
-          src="/IMAGENS/home/arrowDown.gif"
+          src="../IMAGENS/home/arrowDown.gif"
           alt="arrowDown"
           class="arrowDown"
         />
