--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </button>
         <div class="container text-center">
           <img
-            src="/IMAGENS/home/arrowDown.gif"
+            src="./IMAGENS/home/arrowDown.gif"
             alt="arrowDown"
             class="arrowDown"
           />
