ajuste nas imagens de fundo da pagina falcon 9

--- a/HTML/falcon9.html
+++ b/HTML/falcon9.html
@@ -16,7 +16,11 @@
     <!--Link Css-->
     <link rel="stylesheet" href="/CSS/style.css" />
     <!--Favicon-->
-    <link rel="shortcut icon" href="../IMAGENS/favicon.png" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="../IMAGENS/favicon.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <div class="container-fluid container00 container05">
@@ -394,7 +398,11 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="1000000">
-          <img src="/imagens/falcon9/09.jpg" class="d-block w-100" alt="..." />
+          <img
+            src="../IMAGENS/falcon9/09.jpg"
+            class="d-block w-100"
+            alt="..."
+          />
           <div class="carousel-caption d-md-block">
             <p class="carousselText">
               O Falcon 9 lança o Dragon para a Estação Espacial Internacional do
@@ -403,7 +411,11 @@
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="2000000">
-          <img src="/imagens/falcon9/10.jpg" class="d-block w-100" alt="..." />
+          <img
+            src="../IMAGENS/falcon9/10.jpg"
+            class="d-block w-100"
+            alt="..."
+          />
           <div class="carousel-caption d-md-block">
             <p class="carousselText">
               Primeiro e segundo estágio após a separação de voo
@@ -411,7 +423,11 @@
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="3000000">
-          <img src="/imagens/falcon9/11.jpg" class="d-block w-100" alt="..." />
+          <img
+            src="../IMAGENS/falcon9/11.jpg"
+            class="d-block w-100"
+            alt="..."
+          />
           <div class="carousel-caption d-md-block">
             <p class="carousselText">
               Falcon 9 decola com sua carga útil Iridium-5
@@ -419,7 +435,11 @@
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="3000000">
-          <img src="/imagens/falcon9/12.jpg" class="d-block w-100" alt="..." />
+          <img
+            src="../IMAGENS/falcon9/12.jpg"
+            class="d-block w-100"
+            alt="..."
+          />
           <div class="carousel-caption d-md-block">
             <p class="carousselText">
               Falcon 9 pousando no droneship para ler as instruções
@@ -427,7 +447,11 @@
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="3000000">
-          <img src="/imagens/falcon9/13.jpg" class="d-block w-100" alt="..." />
+          <img
+            src="../IMAGENS/falcon9/13.jpg"
+            class="d-block w-100"
+            alt="..."
+          />
           <div class="carousel-caption d-md-block">
             <p class="carousselText">
               Clone dos motores Merlin do Falcon 9 durante a decolagem
@@ -435,7 +459,11 @@
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="3000000">
-          <img src="/imagens/falcon9/14.jpg" class="d-block w-100" alt="..." />
+          <img
+            src="../IMAGENS/falcon9/114.jpg"
+            class="d-block w-100"
+            alt="..."
+          />
           <div class="carousel-caption d-md-block">
             <p class="carousselText">
               O falcon 9 deixa um rastro de luz ao decolar da Base Aérea de
